add ontology for TIS